# CyberEgo

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  index.html  install.sh  package-lock.json  package.json
docs/: README.es.md  README.pt.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  llama_manager.rs  main.rs
src/components/: Dashboard.css  Dashboard.tsx  Icons.tsx  InitialScreen.css  InitialScreen.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx
src/contexts/: ThemeContext.tsx
src/i18n/: I18nContext.tsx  translations.ts
src/utils/: README.md  storage.ts
