[package]
name = "cyberego"
version = "1.0.0"
description = "A local-first AI interaction platform for philosophical debates, ethical dilemmas, and persona customization"
authors = ["NavesDev <naves@navesdev.com>"]
license = "MIT"
repository = "https://github.com/NavesDev/CyberEgo"
homepage = "https://github.com/NavesDev/CyberEgo"
keywords = ["tauri", "ai", "ollama", "philosophy", "ethics"]
categories = ["gui", "command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cyberego_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

